tests/golden/fixtures/syntax-warn-bare-closing-brace/expected.err
Error: invalid syntax: unexpected '}'
   ╭─[ tests/golden/fixtures/syntax-warn-bare-closing-brace/input.k65:4:1 ]
   │
 4 │ }
   │ ┬  
   │ ╰── here
───╯
